--- a/assets/css/templatemo-klassy-cafe.css
+++ b/assets/css/templatemo-klassy-cafe.css
@@ -82,7 +82,7 @@ header, nav, section, article, aside, footer, hgroup {
 html, body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
-  background-color: #fff;
+  background-color: #020012;
   font-size: 16px;
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
@@ -105,7 +105,7 @@ ul {
 p {
   font-size: 14px;
   line-height: 25px;
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 /* 
@@ -115,18 +115,18 @@ global styles
 */
 html,
 body {
-  background: #fff;
+  background: #020012;
   font-family: 'Poppins', sans-serif;
 }
 
 ::selection {
-  background: #fb5849;
-  color: #fff;
+  background: #08B1A9;
+  color: #020012;
 }
 
 ::-moz-selection {
-  background: #fb5849;
-  color: #fff;
+  background: #08B1A9;
+  color: #020012;
 }
 
 @media (max-width: 991px) {
@@ -147,8 +147,8 @@ body {
 
 .main-white-button a {
   font-size: 13px;
-  color: #fb5849;
-  background-color: #fff;
+  color: #bcd6e3;
+  background-color: #020012;
   padding: 12px 25px;
   display: inline-block;
   border-radius: 3px;
@@ -162,7 +162,7 @@ body {
 
 .main-text-button a {
   font-size: 13px;
-  color: #fff;
+  color: #020012;
   font-weight: 600;
   transition: all .3s;
 }
@@ -174,7 +174,7 @@ body {
 .section-heading h6 {
   position: relative;
   font-size: 15px;
-  color: #fb5849;
+  color: #08B1A9;
   font-weight: 500;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -188,7 +188,7 @@ body {
   position: absolute;
   left: 0;
   top: 8px;
-  background-color: #fb5849;
+  background-color: #08B1A9;
 }
 
 .section-heading h2 {
@@ -197,7 +197,7 @@ body {
   margin-bottom: 25px; 
   font-size: 30px;
   font-weight: 900;
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 
@@ -208,30 +208,30 @@ header
 */
 
 .background-header {
-  background-color: #fff;
+  background-color: #020012;
   height: 80px!important;
   position: fixed!important;
   top: 0px;
   left: 0px;
   right: 0px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
+  box-shadow: 0px 0px 10px #bcd6e3!important;
 }
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: #bcd6e3!important;
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fb5849!important;
+  color: #08B1A9!important;
 }
 
 .background-header .nav li a.active {
-  color: #fb5849!important;
+  color: #08B1A9!important;
 }
 
 .header-area {
-  background-color: #fff;
+  background-color: #020012;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -251,7 +251,7 @@ header
 
 .header-area .main-nav .logo {
   line-height: 100px;
-  color: #fff;
+  color: #020012;
   font-size: 28px;
   font-weight: 700;
   text-transform: uppercase;
@@ -297,7 +297,7 @@ header
   display: block;
   font-weight: 600;
   font-size: 15px;
-  color: #2a2a2a;
+  color: #bcd6e3;
   text-transform: capitalize;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -310,17 +310,20 @@ header
 }
 
 .header-area .main-nav .nav li a {
-  color: #2a2a2a;
+  color: #bcd6e3;
+}
+.header-area .main-nav .nav li #konk {
+  color: #5d22cb!important;
 }
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #fb5849!important;
+  color: #08B1A9!important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #fb5849!important;
+  color: #08B1A9!important;
   opacity: 1;
 }
 
@@ -333,20 +336,20 @@ header
   font-family: FontAwesome;
   content: "\f107";
   font-size: 12px;
-  color: #2a2a2a;
+  color: #bcd6e3;
   position: absolute;
   right: 18px;
   top: 12px;
 }
 
 .background-header .main-nav .nav li.submenu:after {
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 .header-area .main-nav .nav li.submenu ul {
   position: absolute;
   width: 200px;
-  box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0 2px 28px 0 #bcd6e3;
   overflow: hidden;
   top: 50px;
   opacity: 0;
@@ -365,8 +368,8 @@ header
 .header-area .main-nav .nav li.submenu ul li a {
   opacity: 1;
   display: block;
-  background: #f7f7f7;
-  color: #2a2a2a!important;
+  background: #011724;
+  color: #bcd6e3!important;
   padding-left: 20px;
   height: 40px;
   line-height: 40px;
@@ -381,8 +384,8 @@ header
 }
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
-  background: #fff;
-  color: #fb5849!important;
+  background: #020012;
+  color: #08B1A9!important;
   padding-left: 25px;
 }
 
@@ -422,7 +425,7 @@ header
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
   display: block;
   position: absolute;
   width: 30px;
@@ -433,7 +436,7 @@ header
 .background-header .main-nav .menu-trigger span,
 .background-header .main-nav .menu-trigger span:before,
 .background-header .main-nav .menu-trigger span:after {
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
 }
 
 .header-area .main-nav .menu-trigger span:before,
@@ -442,7 +445,7 @@ header
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
   display: block;
   position: absolute;
   width: 30px;
@@ -453,7 +456,7 @@ header
 
 .background-header .main-nav .menu-trigger span:before,
 .background-header .main-nav .menu-trigger span:after {
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
 }
 
 .header-area .main-nav .menu-trigger span:before,
@@ -494,11 +497,11 @@ header
   -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
   -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
   transform: translateY(6px) translateX(1px) rotate(45deg);
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
 }
 
 .background-header .main-nav .menu-trigger.active span:before {
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
 }
 
 .header-area .main-nav .menu-trigger.active span:after {
@@ -506,11 +509,11 @@ header
   -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
 }
 
 .background-header .main-nav .menu-trigger.active span:after {
-  background-color: #1e1e1e;
+  background-color: #bcd6e3;
 }
 
 .header-area.header-sticky {
@@ -522,7 +525,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #fb5849;
+  color: #08B1A9;
 }
 
 @media (max-width: 1200px) {
@@ -537,18 +540,18 @@ header
 
 @media (max-width: 767px) {
   .header-area .main-nav .logo {
-    color: #1e1e1e;
+    color: #bcd6e3;
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #fb5849!important;
+    color: #08B1A9!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
     width: 100%;
   }
   .header-area {
-    background-color: #f7f7f7;
+    background-color: #011724;
     padding: 0px 15px;
     height: 100px;
     box-shadow: none;
@@ -584,7 +587,7 @@ header
   }
   .header-area .main-nav .nav li {
     width: 100%;
-    background: #fff;
+    background: #020012;
     border-bottom: 1px solid #eee;
     padding-left: 0px !important;
     padding-right: 0px !important;
@@ -594,12 +597,12 @@ header
     line-height: 50px !important;
     padding: 0px !important;
     border: none !important;
-    background: #f7f7f7 !important;
-    color: #191a20 !important;
+    background: #011724 !important;
+    color: #bcd6e3 !important;
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #fb5849!important;
+    color: #08B1A9!important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -675,7 +678,7 @@ banner
 
 #top .left-content h4 {
   font-family: 'Dancing Script', cursive;
-  color: #fff;
+  color: #bcd6e3;
   font-size: 54px;
   font-weight: 700;
 }
@@ -684,8 +687,8 @@ banner
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #fff;
-  letter-spacing: 3px;
+  color: #bcd6e3;
+  /* letter-spacing: 3px; */
   margin-top: 5px;
 }
 
@@ -760,14 +763,14 @@ banner
   right:30px;
   width: 50px;
   height: 50px;
-  background-color: #fb5849;
+  background-color: #08B1A9;
   border:0 none;
   line-height: 44px;
   border-radius: 50%;
   text-align:center;
   font-size: 36px;
   font-family: 'FontAwesome';
-  color:#FFF;
+  color:#020012;
   z-index:5;
   outline: none;
   opacity: 0.3;
@@ -789,14 +792,14 @@ banner
   left:30px;
   width: 50px;
   height: 50px;
-  background-color: #fb5849;
+  background-color: #08B1A9;
   border:0 none;
   line-height: 44px;
   border-radius: 50%;
   text-align:center;
   font-size: 36px;
   font-family: 'FontAwesome';
-  color:#FFF;
+  color:#020012;
   z-index:5;
   outline: none;
   opacity: 0.3;
@@ -884,8 +887,8 @@ about
   display: inline-block;
   line-height: 70px;
   text-align: center;
-  background-color: #fb5849;
-  color: #fff;
+  background-color: #08B1A9;
+  color: #020012;
   border-radius: 50%;
   transform: translate(-35px, -35px);
   transition: all .3s;
@@ -904,7 +907,7 @@ menu
 
 #menu {
   margin-top: 120px;
-  background-color: #fffafa;
+  background-image: url(../images/reservation-bg.jpg);
   padding: 120px 0px;
 }
 
@@ -941,8 +944,8 @@ menu
 .info {
   position: relative;
   width: 100%;
-  background-color: #fb5849;
-  border: 1px solid #fb5849;
+  background-color: #08B1A9;
+  border: 1px solid #08B1A9;
   transform: translateY(100%)
   translateY(120px)
   translateZ(0);
@@ -959,22 +962,22 @@ menu
   padding: 30px 30px 20px 30px;
   font-size: 20px;
   font-weight: 700;
-  color: #fff;
+  color: #020012;
 }
 
 .description {
   padding: 0px 30px;
-  color: #fff;
+  color: #020012;
 }
 
 #menu .price h6 {
   position: absolute;
   width: 70px;
   height: 70px;
-  background-color: #fb5849;
+  background-color: #08B1A9;
   font-size: 20px;
   font-weight: 700;
-  color: #fff;
+  color: #020012;
   border-radius: 3px;
   text-align: center;
   line-height: 70px;
@@ -1015,7 +1018,7 @@ menu
 #menu .owl-nav .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
-  color: #fb5849;
+  color: #08B1A9;
   font-size: 25px;
   font-weight: 700;
   content: '\f104';
@@ -1047,7 +1050,7 @@ menu
 #menu .owl-nav .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
-  color: #fb5849;
+  color: #08B1A9;
   font-size: 25px;
   font-weight: 700;
   content: '\f105';
@@ -1078,18 +1081,18 @@ chefs
 
 #chefs .chef-item {
   text-align: center;
-  border: 1px solid #afafaf;
+  /* border: 1px solid #5d22cb; */
   padding: 5px;
   transition: all .5s;
   border-radius: 3px;
 }
 
 #chefs .chef-item:hover {
-  border-color: #fb5849;
+  border-color: #08B1A9;
 }
 
 #chefs .chef-item:hover .down-content h4 {
-  color: #fb5849;
+  color: #08B1A9;
 }
 
 #chefs .chef-item .thumb {
@@ -1104,7 +1107,7 @@ chefs
 
 #chefs .chef-item .thumb .overlay {
   position: absolute;
-  background-color: #2a2a2a;
+  background-color: #bcd6e3;
   border-radius: 3px;
   top: 0;
   bottom: 0;
@@ -1136,8 +1139,8 @@ chefs
 #chefs .chef-item .thumb ul.social-icons li a {
   width: 40px;
   height: 40px;
-  background-color: #fff;
-  color: #2a2a2a;
+  background-color: #020012;
+  color: #bcd6e3;
   border-radius: 50%;
   text-align: center;
   line-height: 40px;
@@ -1146,7 +1149,7 @@ chefs
 }
 
 #chefs .chef-item .thumb ul.social-icons li a:hover {
-  background-color: #fb5849;
+  background-color: #08B1A9;
 }
 
 #chefs .chef-item:hover .overlay {
@@ -1167,13 +1170,142 @@ chefs
   transition: all .3s;
   font-size: 20px;
   font-weight: 700;
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 #chefs .chef-item .down-content span {
   font-size: 14px;
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
+
+
+
+
+
+/*
+---------------------------------------------
+galerija
+---------------------------------------------
+*/
+
+#galerija {
+  padding-top: 120px;
+
+}
+
+#galerija .section-heading {
+  margin-bottom: 70px;
+}
+
+#galerija .section-heading h6 {
+  padding-left: 0px;
+}
+
+#galerija .section-heading h6:before {
+  display: none;
+}
+
+#galerija .galery-item {
+  text-align: center;
+  /* border: 1px solid #5d22cb; */
+  padding: 5px;
+  transition: all .5s;
+  border-radius: 3px;
+}
+
+#galerija .galery-item:hover {
+  border-color: #08B1A9;
+}
+
+#galerija .galery-item:hover .down-content h4 {
+  color: #08B1A9;
+}
+
+#galerija .galery-item .thumb {
+  position: relative;
+}
+
+#galerija .galery-item .thumb img {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+#galerija .galery-item .thumb .overlay {
+  position: absolute;
+  background-color: #bcd6e3;
+  border-radius: 3px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+}
+
+#galerija .galery-item .thumb ul.social-icons {
+  position: absolute;
+  z-index: 11;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  transition: all .5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+#galerija .galery-item .thumb ul.social-icons li {
+  display: inline-block;
+  margin: 0px 5px;
+}
+
+#galerija .galery-item .thumb ul.social-icons li a {
+  width: 40px;
+  height: 40px;
+  background-color: #020012;
+  color: #bcd6e3;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  display: inline-block;
+  transition: all .5s;
+}
+
+#galerija .galery-item .thumb ul.social-icons li a:hover {
+  background-color: #08B1A9;
+}
+
+#galerija .galery-item:hover .overlay {
+  opacity: .9;
+  visibility: visible;
+}
+
+#galerija .galery-item:hover ul.social-icons {
+  opacity: 1;
+  visibility: visible;
+}
+
+#galerija .galery-item .down-content {
+  padding: 20px 0px;
+}
+
+#galerijas .galery-item .down-content h4 {
+  transition: all .3s;
+  font-size: 20px;
+  font-weight: 700;
+  color: #bcd6e3;
+}
+
+#galerija .chef-item .down-content span {
+  font-size: 14px;
+  color: #bcd6e3;
+}
+
+
+
 
 
 /* 
@@ -1187,20 +1319,21 @@ reservation
 }
 
 #reservation .section-heading h6 {
-  color: #fff;
+  color: #08B1A9;
 }
 
 #reservation .section-heading h2 {
-  color: #fff;
+  color: #bcd6e3;
   font-weight: 700;
 }
 
 #reservation .section-heading h6:before {
-  background-color: #fff;
+  background-color: #020012;
 }
 
 #reservation p {
-  color: #fff;
+  color: #bcd6e3;
+  
   margin-bottom: 65px;
 }
 
@@ -1215,7 +1348,7 @@ reservation
 
 #reservation .phone,
 #reservation .message {
-  background-color: #fff;
+  background-color: #020012;
   border-radius: 5px;
   text-align: center;
   padding: 0px 0px 20px 0px;
@@ -1228,8 +1361,8 @@ reservation
   display: inline-block;
   text-align: center;
   line-height: 70px;
-  color: #fff;
-  background-color: #fb5849;
+  color: #020012;
+  background-color: #08B1A9;
   border-radius: 50%;
   font-size: 24px;
   margin-top: -35px;
@@ -1240,6 +1373,7 @@ reservation
 
 #reservation .phone h4,
 #reservation .message h4 {
+  color: #5d22cb;
   font-size: 20px;
   font-weight: 700;
   margin-top: 15px;
@@ -1249,19 +1383,19 @@ reservation
 #reservation .phone span a,
 #reservation .message span a {
   font-size: 14px;
-  color: #2a2a2a;
+  color: #bcd6e3;
   transition: all .3s;
 }
 
 #reservation .phone span a:hover,
 #reservation .message span a:hover {
-  color: #fb5849;
+  color: #08B1A9;
 }
 
 #contact {
   margin-left: 30px;
   padding: 45px 30px;
-  background-color: #fff;
+  background-color: #020012;
   border-radius: 5px;
 }
 
@@ -1269,7 +1403,7 @@ reservation
   text-align: center;
   font-weight: 700;
   font-size: 30px;
-  color: #2a2a2a;
+  color: #bcd6e3;
   margin-bottom: 30px;
 }
 
@@ -1281,10 +1415,10 @@ reservation
 .contact-form input,
 .contact-form textarea,
 .contact-form select {
-  color: #2a2a2a;
+  color: #bcd6e3;
   font-size: 14px;
   border: 1px solid #ddd;
-  background-color: #fff;
+  background-color: #020012;
   width: 100%;
   height: 46px;
   border-radius: 5px;
@@ -1301,14 +1435,14 @@ reservation
 .contact-form input:focus,
 .contact-form textarea:focus,
 .contact-form select:focus {
-  border-color: #fb5849;
+  border-color: #08B1A9;
 }
 
 .contact-form button {
   margin-top: -10px;
   font-size: 13px;
-  color: #fff;
-  background-color: #fb5849;
+  color: #020012;
+  background-color: #08B1A9;
   padding: 12px 25px;
   width: 100%;
   box-shadow: none;
@@ -1330,15 +1464,15 @@ reservation
 }
 
 .contact-form ::-webkit-input-placeholder { /* Edge */
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 .contact-form :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 .contact-form ::placeholder {
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 /*
@@ -1376,7 +1510,7 @@ offers
 }
 #offers #tabs ul li {
   display: inline-block;
-  margin: 0px 15px;
+  margin: 0px 5px;
 }
 #offers #tabs ul li:last-child {
   margin-right: 0px;
@@ -1389,7 +1523,7 @@ offers
   width: 100%;
   display: inline-block;
   font-size: 15px;
-  color: #2a2a2a;
+  color: #bcd6e3;
   font-weight: 600;
   transition: all 0.3s;
   text-align: center;
@@ -1400,11 +1534,11 @@ offers
   margin: 0 auto 15px auto;
 }
 #offers #tabs ul .ui-tabs-active a {
-  color: #fb5849;
+  color: #08B1A9;
   position: relative;
 }
 #offers #tabs ul .ui-tabs-active span {
-  color: #1e1e1e;
+  color: #bcd6e3;
 }
 #offers .tabs-content {
   margin-top: 60px;
@@ -1427,7 +1561,7 @@ offers
   padding-top: 10px;
   font-size: 20px;
   font-weight: 700;
-  color: #2a2a2a;
+  color: #bcd6e3;
   margin-bottom: 10px;
   margin-right: 100px;
 }
@@ -1450,14 +1584,14 @@ offers
   right: 0;
   width: 70px;
   height: 70px;
-  background-color: #fb5849;
+  background-color: #08B1A9;
   display: inline-block;
   text-align: center;
   line-height: 70px;
   border-radius: 3px;
   font-size: 18px;
   font-weight: 700;
-  color: #fff;
+  color: #020012;
 }
 
 
@@ -1470,18 +1604,18 @@ footer
 footer {
   margin-top: 60px;
   padding: 50px 0px;
-  background-color: #fb5849;
+  background-color: #08B1A9;
 }
 
 footer .left-text-content p {
   margin-top: 5px;
-  color: #fff;
+  color: #020012;
   font-size: 14px;
   text-align: right;
 }
 
 footer .right-text-content p {
-  color: #fff;
+  color: #020012;
   font-size: 14px;
   margin-right: 15px;
   text-transform: uppercase;
@@ -1513,9 +1647,9 @@ footer .right-text-content ul li a {
   text-align: center;
   line-height: 44px;
   font-size: 20px;
-  background-color: #fff;
+  background-color: #020012;
   border-radius: 50%;
-  color: #fb5849;
+  color: #08B1A9;
   -webkit-transition: all 0.5s ease 0s;
   -moz-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
@@ -1523,7 +1657,7 @@ footer .right-text-content ul li a {
 }
 
 footer .right-text-content ul li a:hover {
-  color: #2a2a2a;
+  color: #bcd6e3;
 }
 
 /* 
@@ -1592,14 +1726,14 @@ responsive
 
 #preloader {
   overflow: hidden;
-  background-color: #fb5849;
+  background-color: #08B1A9;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   position: fixed;
   z-index: 99999;
-  color: #fff;
+  color: #020012;
 }
 
 #preloader .jumper {
@@ -1615,7 +1749,7 @@ responsive
 }
 
 #preloader .jumper > div {
-  background-color: #fff;
+  background-color: #020012;
   width: 10px;
   height: 10px;
   border-radius: 100%;
